// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomAvatar should render as expected for a DM room 1`] = `
<div>
  <span
    class="_avatar_i91o9_17 mx_BaseAvatar"
    data-color="1"
    data-testid="avatar-img"
    data-type="round"
    role="presentation"
    style="--cpd-avatar-size: 36px;"
  >
    D
  </span>
</div>
`;

exports[`RoomAvatar should render as expected for a LocalRoom 1`] = `
<div>
  <span
    class="_avatar_i91o9_17 mx_BaseAvatar"
    data-color="7"
    data-testid="avatar-img"
    data-type="round"
    role="presentation"
    style="--cpd-avatar-size: 36px;"
  >
    l
  </span>
</div>
`;

exports[`RoomAvatar should render as expected for a Room 1`] = `
<div>
  <span
    class="_avatar_i91o9_17 mx_BaseAvatar"
    data-color="2"
    data-testid="avatar-img"
    data-type="round"
    role="presentation"
    style="--cpd-avatar-size: 36px;"
  >
    t
  </span>
</div>
`;
